tests/router/ui/stack_same_kind.stderr
error: #[aggregate] cannot coexist with #[aggregate] on the same impl; exactly one of #[aggregate] / #[saga] / #[process_manager] / #[projector] is allowed
 --> tests/router/ui/stack_same_kind.rs:7:1
  |
7 | #[aggregate(domain = "x", state = State)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `aggregate` (in Nightly builds, run with -Z macro-backtrace for more info)
